--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.0.0",
     "npm": "^10.1.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-facebook": "^9.0.12",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-social-media-embed": "^2.3.5",
     "redux": "^4.2.1",
@@ -44,8 +50,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ahmedjd499.github.io/ARIBiotech",
-  "devDependencies": {
-    "gh-pages": "^6.0.0"
-  }
+  "homepage": "https://ahmedjd499.github.io/ARIBiotech"
 }
